# backend/internal/repository/model/card/card.go
@@ -11,7 +11,8 @@ type CardDB struct {
 	ID            uuid.UUID    `gorm:"type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
 	Title         string       `gorm:"type:varchar(50);not null" json:"title"`
 	UserID        uuid.UUID    `gorm:"type:uuid;" json:"user_id"`
-	Bank          *bank.BankDB `gorm:"foreignKey:bank_id;constraint:OnUpdate:CASCADE,OnDelete:CASCADE" json:"bank"`
+	BankID        *int32       `gorm:"type:int" json:"bank_id"`
+	Bank          *bank.BankDB `gorm:"foreignKey:BankID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE" json:"bank"`
 	DateCreated   time.Time    `gorm:"type:timestamp;default:now();not null" json:"date_created"`
 	LastUpdatedAt time.Time    `gorm:"type:timestamp;default:now();not null" json:"last_updated_at"`
 }
